# S2Cool-Magic-Box

./: .gitignore
.github/workflows/: ci.yml  ingest-current.yml  ingest-historic.yml
backend/: README.md  __init__.py  config.py  main.py  schemas.py
backend/services/: math_model.py
backend/static/: index.html  production_metrics.json
docs/: project_backlog.md
frontend/src/: App.jsx
frontend/src/components/: GhiAnalysis.jsx  MainChart.jsx  TabNav.jsx
ingest/: Makefile  README.md  pyproject.toml
ingest/artifacts/: test_scaler.joblib
ingest/src/ingest/: __init__.py  api.py  db.py  main.py
ingest/tests/: test_api.py  test_db.py  test_preprocessing.py
pipeline/: 01_eda.ipynb  02_modeling.ipynb  __init__.py  data_extraction.py  eda_and_splitting.ipynb  eda_and_splitting.py  preprocessing.py  promote_model.py  train_models.py
