[tool.poetry]
name = "s2cool-ingest"
version = "0.1.0"
description = "Automated Open-Meteo solar & weather data ingestion for Pakistani cities into Neon Postgres."
authors = ["Ahmad Saeed"]
license = "MIT"
readme = "README.md"
packages = [{ include = "ingest", from = "src" }]

[tool.poetry.scripts]
ingest = "ingest.main:main"

[tool.poetry.dependencies]
python = ">=3.11 <3.12"
requests = "^2.32"
psycopg2-binary = "^2.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
black = "^24.0"
ruff = ">=0.4,<1.0"

[tool.black]
line-length = 99
target-version = ["py311"]

[tool.ruff]
line-length = 99
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
